<resources>
    <string name="app_name">TakeMe</string>
    <string name="title_home">Home</string>
    <string name="title_add">Post</string>
    <string name="title_chat">Discussions</string>
    <string name="developer_name">Abdulsalam Opeyemi</string>
    <string name="developer_phone">07062709410</string>
    <string name="developer_phone_international">+2347062709410</string>
    <string name="title_profile">Profile</string>
    <string name="slogan">Connect for quality transactional services.</string>


    <!-- For Main menu -->
    <string name="job_location_details">%1$s, %2$s.</string>
    <string name="need">needs</string>
    <string name="search">search</string>
    <string name="search_label">Job Search</string>
    <string name="at">at</string>
    <string name="search_result">Search result for %1$s</string>
    <string name="no_search_result">No result found for %1$s</string>
    <!--Main menu ends here-->


    <!-- For sign-in and sign-up activity-->
    <string name="password">Password</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="continue_sign_in">Sign in to continue</string>
    <string name="welcome">Welcome,</string>
    <string name="agree">I agree to Takeme\'s</string>
    <string name="terms_of_use_string">Terms of Use</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="name_string">Name</string>
    <string name="forgot_password">Forgot your password?</string>

    <!-- sign-in and Sign-up activity ends here-->


    <!--For Job details Activity-->
    <string name="description">Job Description</string>
    <string name="location">%1$s %2$s, %3$s, %4$s. </string>
    <string name="job_name"> %1$s</string>
    <!--Job details Activity Ends-->

    <!-- For Chat Section -->
    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="contacts_permission_rationale">Access to account information is required to sign in.</string>
    <string name="invite_menu_label">Invite</string>
    <string name="invitation_message">Please join me for a friendly chat</string>
    <string name="invitation_cta">Call to action</string>
    <string name="invitation_title">Friendly Chat Invite</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="fresh_config">Fresh Config</string>
    <string name="cause_crash">Cause Crash</string>
    <string name="view_profile">View Profile</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Chat Section ends -->


    <!--Profile section -->
    <string name="job_post_tab_title">Job Posts</string>
    <string name="details_tab_title">Details</string>
    <string name="profile_update_info">
        Setting your profile correctly improves your chance of being trusted to work on a job by
        other users and also encourages others to take up your jobs post more seriously.
    </string>
    <string name="logout">Logout</string>
    <string name="rate">Rate</string>
    <string name="rate_user">Rate User</string>
    <string name="rate_user_message">Do you want to rate this user</string>
    <string name="leave_a_comment">Leave a comment for the user</string>
    <!--Profile section  ends-->

    <!--Profile Edit Start-->
    <string name="edit_profile_label">Edit Profile</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <!--Profile edit  ends-->


    <!--Menu List section -->
    <string name="icon_message_title">message</string>
    <string name="icon_job_details_title">view job details</string>
    <string name="icon_call_title">call</string>
    <!--Profile section  ends-->

    <!--Dialog-->
    <string name="phonecall">Phone call</string>
    <string name="dialog_make_a_phone_call">Put a call through to %1$s on %2$s to make job request?</string>
    <string name="call">CALL</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_job_view">JobViewActivity</string>
    <!--Dialog strings end-->


    <!--New Post Strings-->
    <string name="click_image">Add Job Image</string>
    <string name="price">price</string>
    <string name="job_location">job location</string>
    <string name="job_location_address">address</string>
    <string name="job_location_area">area</string>
    <string name="job_location_city">city</string>
    <string name="job_location_state">state</string>
    <string name="create_job">create job</string>
    <string name="job_post">Job Post</string>
    <string name="allow_call">Job applicants can place a phone call.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="make_post_without_image">Do you want to make a post without job image?</string>
    <string name="upload_image">Upload Image</string>
    <!--Job New Post Strings end here-->

</resources>