<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.opeyemi.takeme.MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/job_title_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="@drawable/rounded_corner"
            android:hint="job Title"
            app:met_floatingLabel="highlight" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/job_description_editText"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="7dp"
            android:background="@drawable/rounded_corner"
            android:gravity="top|start"
            android:hint="job Description"
            android:inputType="textMultiLine|textCapSentences"
            android:scrollbars="none"
            app:met_floatingLabel="highlight" />

        <android.support.v7.widget.CardView
            android:id="@+id/job_image_card_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/new_job_image_view"
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_centerInParent="true"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"
                        android:layout_marginBottom="7dp"
                        android:background="@drawable/rounded_corner" />

                    <ProgressBar
                        android:id="@+id/image_loading_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"/>

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/click_image"
                    android:textColor="@android:color/black" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/amount_payable_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/price"
            app:met_floatingLabel="highlight" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="@drawable/rounded_corner"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/job_location"
                    android:textColor="@android:color/black"
                    android:textSize="10sp" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/address_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/rounded_corner"
                    android:hint="@string/job_location_address"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/area_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/rounded_corner"
                    android:hint="@string/job_location_area"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/city_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/rounded_corner"
                    android:hint="@string/job_location_city"
                    app:met_floatingLabel="highlight" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/state_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:background="@drawable/rounded_corner"
                    android:hint="@string/job_location_state"
                    app:met_floatingLabel="highlight" />

            </LinearLayout>
        </FrameLayout>

        <CheckBox
            android:id="@+id/make_a_call_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/allow_call" />

        <include
            android:id="@+id/navigation"
            layout="@layout/element_bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>





